# terminal-copilot

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.github/workflows/: publish.yml
terminal_copilot/: __init__.py  agent.py  cli.py  config.py  history.py  investigation.py  llm.py  models.py  plugins.py  preflight.py  runner.py  tools.py  workflow.py
tests/: __init__.py  test_cli.py  test_preflight.py
