[project]
name = "terminal-copilot"
version = "0.1.0"
description = "A CLI tool that wraps shell commands with diagnostics and AI-ready workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "langgraph>=0.0.20",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
terminal-copilot = "terminal_copilot.cli:entry"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
